src/test/ui/issues/issue-4201.stderr
error[E0317]: if may be missing an else clause
  --> $DIR/issue-4201.rs:14:12
   |
LL |       } else if false {
   |  ____________^
LL | | //~^ ERROR if may be missing an else clause
LL | | //~| expected type `()`
LL | | //~| found type `{integer}`
LL | | //~| expected (), found integral variable
LL | |         1
LL | |     };
   | |_____^ expected (), found integral variable
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0317`.
